--- a/package.json
+++ b/package.json
@@ -9,47 +9,47 @@
   },
   "devDependencies": {
     "babel-eslint": "^8.2.6",
-    "cross-env": "^5.1",
+    "cross-env": "^6.0.3",
     "css-loader": "^0.28.8",
     "eslint": "^4.19.1",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-loader": "^3.0.3",
-    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-loader": "^3.0.4",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-vue": "^4.7.1",
-    "laravel-mix": "^5.0.0",
-    "prettier": "^2.0.2",
+    "laravel-mix": "^4.0.7",
+    "prettier": "^2.0.5",
     "resolve-url-loader": "3.1.0",
-    "sass": "^1.22.9",
+    "sass": "1.20.1",
     "sass-loader": "7.*",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.12"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.11.2",
-    "@fortawesome/fontawesome-svg-core": "^1.2.25",
-    "@fortawesome/free-regular-svg-icons": "^5.11.2",
-    "@fortawesome/free-solid-svg-icons": "^5.11.2",
-    "@fortawesome/vue-fontawesome": "^0.1.7",
-    "axios": "^0.19",
-    "bootstrap": "^4.1.0",
-    "chart.js": "^2.7.3",
+    "@fortawesome/fontawesome-free": "^5.14.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-regular-svg-icons": "^5.14.0",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/vue-fontawesome": "^0.1.10",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.0.0",
+    "chart.js": "^2.9.3",
     "guid": "0.0.12",
-    "lodash": "^4.17.13",
-    "moment": "^2.18.1",
+    "lodash": "^4.17.20",
+    "moment": "^2.27.0",
     "sweet-modal-vue": "^2.0.0",
     "sweetalert": "^2.1.2",
     "toastr": "^2.1.4",
     "v-money": "^0.8.1",
-    "v-tooltip": "^2.0.2",
-    "vue": "^2.5.17",
-    "vue-avatar-cropper": "^1.0.5",
-    "vue-i18n": "^8.14.0",
+    "v-tooltip": "^2.0.3",
+    "vue": "^2.6.12",
+    "vue-avatar-cropper": "^1.0.6",
+    "vue-i18n": "^8.21.0",
     "vue-multiselect": "^2.1.3",
     "vue-router": "2.7.0",
     "vue-tabs-component": "^1.5.0",
     "vue2-dropzone": "^3.0.6",
-    "vuedraggable": "^2.23.2",
+    "vuedraggable": "^2.24.1",
     "vuejs-datepicker": "^1.3.0",
     "vuelidate": "^0.6.2",
-    "vuex": "^3.0.1"
+    "vuex": "^3.5.1"
   }
 }
